--- a/index.html
+++ b/index.html
@@ -2,11 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link
-      rel="icon"
-      type="image"
-      href="/linkedin-clone/public/Linkedin-logo.png"
-    />
+    <link rel="icon" type="image" href="/public/Linkedin-logo.png" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>LinkedIn</title>
