--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image" href="/public/Linkedin-logo.png" />
+    <link rel="icon" type="image" href="/Linkedin-logo.png" sizes="20" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>LinkedIn</title>
